text fix on mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
     background-size: cover;
     width: 100%;
     height: 100%;
-    animation: zoom 25s infinite;
+    animation: zoom 30s infinite;
 }
 
 .intro__container{
@@ -303,7 +303,6 @@ footer{
     line-height: 1.36;
     letter-spacing: -0.14px;
     margin-bottom: 35px;
-    text-align: justify;
 }
 
 .member__fullname{
@@ -392,6 +391,7 @@ footer{
 
     .item__subTitle{
         font-size: 22px;
+        text-align: justify;
     }
 
     .link{
@@ -436,7 +436,8 @@ footer{
         transform: scale(1);
     }
     50%{
-        transform: scale(1.5);
+        transform: scale(1.25);
+        
     }
     100%{
         transform: scale(1);
